# CLiR

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
.cmake/api/v1/reply/: index-2023-02-10T12-38-01-0146.json
src/: defines.h  main.c  main.cpp
src/buffer/: framebuffer.c  framebuffer.h
src/context/: context.c  context.h
